RESOLVED FIXED292420
Fix internal visionOS build after 294407@main
https://bugs.webkit.org/show_bug.cgi?id=292420
Summary Fix internal visionOS build after 294407@main
Alex Christensen
Reported 2025-05-01 21:06:44 PDT
Attachments
Alex Christensen
Comment 1 2025-05-01 21:07:20 PDT
EWS
Comment 2 2025-05-01 21:11:09 PDT
Committed 294411@main (0a96a908bc62): <https://commits.webkit.org/294411@main> Reviewed commits have been landed. Closing PR #44829 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.