Fix internal visionOS build after 294407@main https://bugs.webkit.org/show_bug.cgi?id=292420 rdar://150495480

Unreviewed.

* Source/WebCore/html/shadow/SpatialImageControls.cpp:

Canonical link: https://commits.webkit.org/294411@main