Source/WebCore/editing/cocoa/HTMLConverter.mm
@@ -38,7 +38,7 @@
 #import "ColorMac.h"
 #import "CommonAtomStrings.h"
 #import "ComposedTreeIterator.h"
-#include "ContainerNodeInlines.h"
+#import "ContainerNodeInlines.h"
 #import "Document.h"
 #import "DocumentLoader.h"
 #import "Editing.h"
